rojo-test/src/snapshots/rojo_test__build_gitkeep.snap
---
created: "2019-08-08T00:40:36.892733600Z"
creator: insta@0.10.0
source: rojo-test/src/lib.rs
expression: contents
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">gitkeep</string>
    </Properties>
  </Item>
</roblox>
