rojo-test/src/snapshots/rojo_test__build_txt_in_folder.snap
---
created: "2019-08-08T00:40:50.026718300Z"
creator: insta@0.10.0
source: rojo-test/src/lib.rs
expression: contents
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">txt_in_folder</string>
    </Properties>
    <Item class="StringValue" referent="1">
      <Properties>
        <string name="Name">foo</string>
        <string name="Value"></string>
      </Properties>
    </Item>
  </Item>
</roblox>
